# rvault

./: .dockerignore  .env.sample  .env.test  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
docs/: openapi.yml
example/: .env.sample  docker-compose.yml  prometheus.yml
example/provisioning/dashboards/: dashboard.yml  rvault.json
example/provisioning/datasources/: datasource.yml
example/rvault_data/: storage.yaml
src/: cache.rs  config.rs  crypto.rs  database.rs  logging.rs  main.rs  metrics.rs  models.rs  policies.rs  router.rs  secrets.rs  state.rs  storage.rs  topics.rs
src/api_tests/: assertions.rs  client.rs  consts.rs  endpoints.rs  mod.rs  runtime.rs
src/api_tests/auth_tests/: issue_admin_token_tests.rs  issue_user_token_tests.rs  mod.rs  refresh_tokens_test.rs
src/api_tests/models/: auth.rs  common.rs  mod.rs  policies.rs  secrets.rs  shared_keys.rs  topics.rs
src/api_tests/secrets_tests/: create_tests.rs  delete_tests.rs  list_tests.rs  mod.rs  read_tests.rs  update_tests.rs  update_version_tests.rs  versions_tests.rs
src/api_tests/storage_tests/: init_tests.rs  mod.rs  seal_tests.rs  unseal_tests.rs
src/auth/: router.rs
src/database/: builder.rs  mod.rs  mongo.rs
src/http/: errors.rs  headers.rs  jwt_tokens.rs  middleware.rs  mod.rs  server.rs  test_handlers.rs  tracing.rs  utils.rs
src/tests/: assertions.rs  consts.rs  database.rs  jwt_utils.rs  mod.rs  models.rs  routes.rs  server.rs  setup.rs  storage.rs  utils.rs
src/utils/: aes.rs  base64.rs  common.rs  hkdf.rs  mod.rs  shared_keys.rs
(+44 files in other folders)
