[package]
name = "rvault"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
dotenv = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
