[package]
name = "rvault"
version = "0.0.1"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.94"
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde", "clock"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
mongodb = "3.2.0"
once_cell = "1.20.2"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
shamir = "2.0.0"
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = [
    "catch-panic",
    "compression-full",
    "sensitive-headers",
    "timeout",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
reqwest = { version = "0.12.9", features = ["json"] }
